---
source: tests/integration/install.rs
expression: result
---
ServerPackages:
  Minimal.lua: "return require(script.Parent._Index[\"biff_minimal@0.1.0\"][\"minimal\"])\n"
  _Index:
    biff_minimal@0.1.0:
      minimal:
        init.lua: "return \"hey\""
default.project.json: "{\n\t\"name\": \"one-dependency\",\n\t\"tree\": {\n\t\t\"$path\": \"src\"\n\t}\n}"
gooey.lock: "# This file is automatically @generated by gooey.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/minimal\"\nversion = \"0.1.0\"\ndependencies = []\n\n[[package]]\nname = \"biff/one-dependency\"\nversion = \"0.1.0\"\ndependencies = [[\"Minimal\", \"biff/minimal@0.1.0\"]]\n"
gooey.toml: "[package]\nname = \"biff/one-dependency\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n\n[server-dependencies]\nMinimal = \"biff/minimal@0.1.0\"\n"
src:
  init.lua: "local Minimal = require(script.Parent.Minimal)\n\nreturn function()\n\tprint(Minimal)\nend"

